--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>super mart</title>
 
     <h1>my super mart</h1>
-     <h6>my super mart</h6>
+     <h6>my super mart or you can say it D MART also</h6>
 
 </head>
 <body>
